[tool.poetry]
name = "pubz"
version = "0.5.0"
description = "Publication managemnet system"
authors = ["Yoshimura Naoya <yoshimura708x@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^2.2.24"
django-bootstrap4 = "^3.0.1"
mysqlclient = "^2.0.3"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^2.4.0"
django-autocomplete-light = "^3.8.2"
django-bootstrap-datepicker-plus = "^3.0.5"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
mkdocs = "^1.2.1"
Sphinx = "^4.0.2"
sphinx-rtd-theme = "^0.5.2"
pysen = {version = "0.9.1", extras = ["lint"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
