[tool.poetry]
name = "pubz"
version = "0.5.0"
description = "Publication managemnet system"
authors = ["Yoshimura Naoya <yoshimura708x@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^2.2.24"
django-bootstrap4 = "^3.0.1"
mysqlclient = "^2.0.3"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^2.4.0"
django-autocomplete-light = "^3.8.2"
django-bootstrap-datepicker-plus = "^3.0.5"
PyMySQL = "=1.0.2"

[tool.poetry.dev-dependencies]
mkdocs = "^1.2.1"
Sphinx = "^4.0.2"
sphinx-rtd-theme = "^0.5.2"
pysen = {version = "0.9.1", extras = ["lint"]}
pysen-ls = "^0.1.1"
mkdocs-material = "^7.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
mypy_preset = "strict"
line_length = 88
py_version = "py37"
isort_known_third_party = ["numpy"]
isort_known_first_party = ["pysen"]
mypy_ignore_packages = ["pysen.generated.*"]
mypy_path = ["stubs"]
[[tool.pysen.lint.mypy_targets]]
  paths = [".", "tests/"]

[tool.pysen.lint.source]
  includes = ["src", "utils"]
  include_globs = []
  excludes = ["third_party/"]
  exclude_globs = ["**/migrations/*.py"]

[tool.pysen.lint.mypy_modules."pysen.scripts"]
  preset = "entry"

[tool.pysen.lint.mypy_modules."numpy"]
  ignore_errors = true
